# fleet-rlm

./: .env.example  .gitignore  .mcp.json  .neon  .pre-commit-config.yaml  .stats.yml  AGENTS.md  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMMIT_PUSH_PLAN.md  CONTRIBUTING.md  DECISION.md  FINAL_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  LICENSE  Makefile  PLANS-DECISION.md  PLANS.md  README.md  RELEASE_NOTES_v0.3.0.md  RELEASING.md  RESTRUCTURING_PROGRESS.md  SECURITY.md  TASKS.md  alembic.ini  api.md  debug_modal_stdout.py  debug_modal_sync_access.py  dspy_docs_analysis_final.py  dspy_docs_analysis_results.json  dspy_docs_rlm_analysis.py  fleet-rlm-dspy.code-workspace  fleet_rlm.db  inspector.json  openapi.yaml  opencode.json  package-lock.json  patch_ws.py  (+14 more)
.agents/subagents/: rlm-subcall.md
.azure/: plan.md
.claude/agents/: modal-interpreter-agent.md  rlm-orchestrator.md  rlm-specialist.md  rlm-subcall.md
.claude/hooks/: README.md
.claude/rlm_state/: chunk_manifest.txt  guide_state.pkl  orchestrator_files.txt  relevant_files.txt  state.pkl
.codex/: config.toml
.codex/agents/: backend_impl.toml  docs_keeper.toml  explorer.toml  frontend_impl.toml  lead.toml  linear_ops.toml  qa_playwright.toml  reviewer.toml
.codex/environments/: environment.toml
.factory/: init.sh  services.yaml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  live-benchmark.yml  neon_workflow.yml  publish-pypi.yml  release-doctor.yml  release.yml
.letta/: settings.json  settings.local.json  skills-hash.json
.letta/agents/: rlm-orchestrator.md
.matter/: runtime.yaml
.opencode/plans/: fleet-rlm-restructuring.md
.test_venv/: pyvenv.cfg
@plan/implementation-0.4.8/: 01_codebase_hardening_qre_296_299.md  02_rlm_assessment_qre_300_301.md  03_canvas_ux_rendering_qre_302_310.md  04_postgres_schema_neon_qre_311_314.md  05_telemetry_settings_stabilization_qre_316_320.md  README.md
archive/: IMPLEMENTATION_SUMMARY.md  catalog.json
artifacts/: phase_6_e2e_testing.md
config/: config.yaml  test_responses_endpoint.py
docs/: README.md  SUMMARY.md  VFS_TAXONOMY.md  architecture.md  auth.md  concepts.md  contributing.md  db.md  getting-started.md  index.md  litellm-models.md  uml.md  user_flows.md  wiring-analysis.md
docs/artifacts/: README.md  architecture.md  architecture_diagram.md  concept.md  detailed_plan.md  evolution_design.md  evolutive_memory.md  frontend_exploration_walkthrough.md  frontend_state.md  implementation_plan.md  multi_agent_sequence.md  phase_3_completion_artifact.md  phase_6_detailed_plan.md  rlm_machine.md  sequence.md  task.md  user_flow.md  user_stories_testing.md  walkthrough.md
docs/explanation/: README.md  architecture.md  component-uml.md  concepts.md  index.md  memory-topology.md  product-spec.md  rlm-concepts.md  stateful-architecture.md  user-flows.md
docs/guides/: cli-reference.md  frontend-product-surface.md  notebooks.md  skills-and-agents.md  skills-usage.md  troubleshooting.md
docs/historical/: architecture-audit-2026-03-06.md  code-health-complexity-heatmap.md  code-health-map.md  code-health-unused-review.md  index.md
migrations/: README  env.py
notebooks/: claude-code-agents-fleet-rlm-setup.ipynb  dspy-react-agent-tutorial.ipynb  react-behavior-analysis.ipynb  rlm-dspy-modal.ipynb  rlm-evaluation-suite.ipynb
plans/: alignment_analysis.md  concepts.md  dspy_alignment_audit.md  dspy_alignment_verification.md  feature_comparison_matrix.md  implementation_plan.md  memory_concept.md  task.md  walkthrough.md
rlm_content/: AGENTS.md  README.md  pyproject.toml  rlm-dspy-modal.ipynb
rlm_content/docs/skills/guide/: equiping-agents-for-the-real-world.md
rlm_content/docs/tools/: The-Complete-Guide-to-Building-Skill-for-Claude.md
rlm_content/dspy-doc/: dspy-doc.txt  mermaid.md
rlm_content/dspy-knowledge/: dspy-RLM.md  dspy-doc.txt  mermaid.md
rlm_content/long-running-agent/: long-running-agent-tips.md
rlm_content/rlm-knowledge/: rlm-paper.md
rlm_content/skills-knowledge/skills/: skills-for-enterprise.md  skills-with-api.md
rlm_content/skills-knowledge/skills/guide/: equiping-agents-for-the-real-world.md
rlm_content/skills-knowledge/tools/: The-Complete-Guide-to-Building-Skill-for-Claude.md  bash-tools.md  memory-tool-claude-code.md
rlm_content/src/rlm_dspy_modal/: __init__.py  cli.py  config.py  driver.py  interpreter.py  runners.py  tools.py
rlm_content/src/rlm_dspy_modal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rlm_content/tests/: test_cli_smoke.py  test_config.py  test_driver_protocol.py  test_tools.py
scripts/: RELEASING.md  _fix_skills.py  build_ui.py  check_agents_md_freshness.py  check_docs_quality.py  check_release_hygiene.py  check_release_metadata.py  check_wheel_frontend_sync.py  db_init.py  db_smoke.py  dev_issue_token.py  evaluate_mlflow_traces.py  export_mlflow_traces.py  generate_openapi.py  lint  mlflow_cli.py  openapi_tools.py  optimize_dspy_with_mlflow.py  rewrite_ws.py  run_backend_fast_tests.zsh  run_ty_check.zsh  test_modal_connection.py  validate_agents.py  validate_env.py  validate_openapi.py  validate_release.py  validate_rlm_e2e_trace.py  validate_rlm_env.py
tests/: README.md  __init__.py  conftest.py  test_agent_state.py  test_cli_smoke.py  test_client.py  test_code_chat_repl.py  test_config.py  test_context_manager.py  test_deepcopy.py  test_driver_helpers.py  test_driver_protocol.py  test_extract_files.py  test_files.py  test_full_integration.py  test_interactive_ui.py  test_llm_query_features.py  test_llm_query_mock.py  test_models.py  test_qs.py  test_react_agent.py  test_required_args.py  test_response.py  test_rlm_benchmarks.py  test_scaffold.py  test_scaffold_scripts.py  test_stateful_sandbox.py  test_streaming.py  test_textual_app.py  test_tools.py  test_transform.py  test_v2_volume.py  utils.py
tmp/: ws-test.ts
tui/: package.json
tui-ink/: biome.json  tsconfig.json
tui/src/: App.tsx  (+1 more)
validation_template/: validation_report_template.md
(+4875 files in other folders)
