[project]
name = "fleet-rlm"
version = "0.4.1"
description = "Recursive Language Models with DSPy + Modal for secure long-context code execution"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "AUTHORS.md"]
authors = [{ name = "Qredence" }]
keywords = ["dspy", "llm", "modal", "recursive-language-model", "rlm", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "dspy==3.1.3",
    "markitdown[all]>=0.1.0,<1",
    "modal>=1.3.2",
    "pypdf>=6,<7",
    "pydantic>=2.12.5,<3",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3,<7",
    "tomli>=2.0.0; python_version < '3.11'",
    "typer>=0.21.1,<1",
]

[project.urls]
Homepage = "https://github.com/qredence/fleet-rlm"
Repository = "https://github.com/qredence/fleet-rlm"
Issues = "https://github.com/qredence/fleet-rlm/issues"
Documentation = "https://fleet-rlm.readthedocs.io/"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7",
    "pytest>=8.2",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "ty>=0.0.1a16",
    "build>=1.2",
    "twine>=5.1",
]
mcp = ["fastmcp>=2.14.0,<3", "httpx[socks]>=0.28.1,<1", "pydantic>=2.12.5,<3"]
server = [
    "fastapi[standard]>=0.115,<1",
    "pydantic>=2.12.5,<3",
    "scalar-fastapi>=1.5.0,<2",
    "uvicorn[standard]>=0.32,<1",
    "websockets>=14,<17",
]
full = [
    "fastmcp>=2.14.0,<3",
    "httpx[socks]>=0.28.1,<1",
    "pydantic>=2.12.5,<3",
    "fastapi[standard]>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "scalar-fastapi>=1.5.0,<2",
    "websockets>=14,<17",
]

[project.scripts]
fleet-rlm = "fleet_rlm.cli:app"
rlm-modal = "fleet_rlm.cli:app"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fleet_rlm._scaffold" = ["**/*.md", "**/*.py", "**/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
