[project]
name = "fleet-rlm"
version = "0.4.7"
description = "Recursive Language Models with DSPy + Modal and an integrated Web UI for secure long-context code execution"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "AUTHORS.md"]
authors = [{ name = "Qredence" }]
keywords = ["dspy", "llm", "modal", "recursive-language-model", "rlm", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "dspy==3.1.3",
    "hydra-core>=1.3,<2",
    "markitdown[all]>=0.1.0,<1",
    "omegaconf>=2.3,<3",
    "modal>=1.3.2",
    "pypdf>=6,<7",
    "pydantic>=2.12.5,<3",
    "prompt-toolkit>=3.0.50,<4",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3,<7",
    "rich>=13.9,<14",
    "structlog>=24.1.0,<25",
    "sqlmodel>=0.0.24",
    "aiosqlite>=0.20.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "typer>=0.21.1,<1",
    "posthog>=7.9.1",
    "asyncpg>=0.31.0",
    "sqlalchemy>=2.0.46",
    "greenlet>=3.3.1",
    "psycopg>=3.3.2",
    "fastapi[standard]>=0.128.7",
    "websockets>=15.0.1",
    "uvicorn>=0.40.0",
    "dspy-ai>=3.1.3",
    "litellm>=1.81.10",
    "pgvector>=0.4.2",
]

[project.urls]
Homepage = "https://github.com/qredence/fleet-rlm"
Repository = "https://github.com/qredence/fleet-rlm"
Issues = "https://github.com/qredence/fleet-rlm/issues"
Documentation = "https://fleet-rlm.readthedocs.io/"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7",
    "pytest>=8.2",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "ty>=0.0.1a16",
    "build>=1.2",
    "twine>=5.1",
]
mcp = ["fastmcp>=2.14.0,<4", "httpx[socks]>=0.28.1,<1", "pydantic>=2.12.5,<3"]
server = [
    "alembic>=1.13,<2",
    "asyncpg>=0.29,<1",
    "fastapi[standard]>=0.115,<1",
    "greenlet>=3.0,<4",
    "psycopg[binary]>=3.2,<4",
    "PyJWT>=2.8,<3",
    "pydantic>=2.12.5,<3",
    "sqlalchemy>=2,<3",
    "scalar-fastapi>=1.5.0,<2",
    "uvicorn[standard]>=0.32,<1",
    "websockets>=14,<17",
]
full = [
    "alembic>=1.13,<2",
    "asyncpg>=0.29,<1",
    "fastmcp>=2.14.0,<4",
    "httpx[socks]>=0.28.1,<1",
    "pydantic>=2.12.5,<3",
    "psycopg[binary]>=3.2,<4",
    "PyJWT>=2.8,<3",
    "sqlalchemy>=2,<3",
    "greenlet>=3.0,<4",
    "fastapi[standard]>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "scalar-fastapi>=1.5.0,<2",
    "websockets>=14,<17",
]

[project.scripts]
fleet = "fleet_rlm.fleet_cli:main"
fleet-rlm = "fleet_rlm.cli:main"
rlm-modal = "fleet_rlm.cli:main"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fleet_rlm._scaffold" = ["**/*.md", "**/*.py", "**/*.json"]
"fleet_rlm.conf" = ["*.yaml", "*.yml"]
"fleet_rlm" = ["py.typed"]
"fleet_rlm.ui" = ["dist/**/*", "dist/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
markers = ["benchmark: performance/throughput benchmark tests"]

[tool.ty.src]
exclude = ["tests/", "scripts/", "notebooks/", "test_modal_guard.py"]
