[project]
name = "fleet-rlm"
version = "0.4.97"
description = "Recursive Language Models with DSPy + Modal and an integrated Web UI for secure long-context code execution"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "AUTHORS.md"]
authors = [{ name = "Qredence" }]
keywords = ["dspy", "llm", "modal", "recursive-language-model", "rlm", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "dspy==3.1.3",
    "daytona>=0.149.0,<1",
    "hydra-core>=1.3,<2",
    "markitdown[all]>=0.1.0,<1",
    "omegaconf>=2.3,<3",
    "modal>=1.3.5",
    "pypdf>=6.8.0,<7",
    "pydantic>=2.12.5,<3",
    "pydantic-settings>=2.12.0,<3",
    "prompt-toolkit>=3.0.50,<4",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3,<7",
    "rich>=13.9,<15",
    "structlog>=24.1.0,<26",
    "sqlmodel>=0.0.24",
    "aiosqlite>=0.20.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "typer>=0.21.1,<1",
    "posthog>=7.9.6",
    "asyncpg>=0.31.0,<1",
    "sqlalchemy>=2.0.46,<3",
    "greenlet>=3.3.1,<4",
    "psycopg>=3.3.2,<4",
    "fastapi[standard]>=0.134.0,<1",
    "websockets>=15,<17",
    "uvicorn>=0.40.0,<1",
    "dspy-ai>=3.1.3",
    "litellm>=1.82.0",
    "pgvector>=0.4.2",
    "PyJWT>=2.12.1,<3",
    "mlflow[mcp]>=3.10.0",
    "ripgrep>=15.0.0",
]

[project.urls]
Homepage = "https://github.com/qredence/fleet-rlm"
Repository = "https://github.com/qredence/fleet-rlm"
Issues = "https://github.com/qredence/fleet-rlm/issues"
Documentation = "https://fleet-rlm.readthedocs.io/"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7",
    "pytest>=8.2",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.4",
    "ty>=0.0.19",
    "build>=1.2",
    "twine>=5.1",
]
mcp = ["fastmcp>=2.14.0,<4", "httpx[socks]>=0.28.1,<1", "pydantic>=2.12.5,<3"]
server = [
    "alembic>=1.13,<2",
    "asyncpg>=0.31.0,<1",
    "fastapi[standard]>=0.134.0,<1",
    "greenlet>=3.3.1,<4",
    "psycopg[binary]>=3.3.2,<4",
    "pydantic>=2.12.5,<3",
    "sqlalchemy>=2.0.46,<3",
    "scalar-fastapi>=1.5.0,<2",
    "uvicorn[standard]>=0.40.0,<1",
    "websockets>=15,<17",
]
full = [
    "alembic>=1.13,<2",
    "asyncpg>=0.31.0,<1",
    "fastmcp>=2.14.0,<4",
    "httpx[socks]>=0.28.1,<1",
    "pydantic>=2.12.5,<3",
    "psycopg[binary]>=3.3.2,<4",
    "PyJWT>=2.12.1,<3",
    "sqlalchemy>=2.0.46,<3",
    "greenlet>=3.3.1,<4",
    "fastapi[standard]>=0.134.0,<1",
    "uvicorn[standard]>=0.40.0,<1",
    "scalar-fastapi>=1.5.0,<2",
    "websockets>=15,<17",
]

[project.scripts]
fleet = "fleet_rlm.cli.main:main"
fleet-rlm = "fleet_rlm.cli.fleet_cli:main"
rlm-modal = "fleet_rlm.cli.main:main"

[tool.fastapi]
entrypoint = "fleet_rlm.api.main:app"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest-timeout>=2.4.0"]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["fleet_rlm*"]
namespaces = false

[tool.setuptools.package-data]
"fleet_rlm._scaffold" = ["**/*.md", "**/*.py", "**/*.json"]
"fleet_rlm.conf" = ["*.yaml", "*.yml"]
"fleet_rlm" = ["py.typed"]
"fleet_rlm.ui" = ["dist/**/*", "dist/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "unit: unit test suite",
    "ui: UI/server test suite",
    "integration: integration test suite",
    "db: database-backed integration tests",
    "e2e: end-to-end test suite",
    "benchmark: performance/throughput benchmark tests",
    "live_llm: tests that require live Modal + configured LM/LITELLM secret",
    "live_daytona: tests that require a live Daytona backend and explicit opt-in",
]

[tool.ty.src]
exclude = ["tests/", "scripts/", "notebooks/", "test_modal_guard.py"]

[tool.deptry]
# Exclude test directories and node_modules from import scanning
extend_exclude = ["node_modules/"]
# Ignore unused dependencies (DEP002) - many are transitive or used in optional extras
# Ignore missing dependencies (DEP001) - many are transitive deps of installed packages
ignore = ["DEP001", "DEP002"]
# Mark dev extra as development dependencies
pep621_dev_dependency_groups = ["dev"]
# Known first-party modules
known_first_party = ["fleet_rlm"]

[tool.deptry.package_module_name_map]
hydra-core = "hydra"
pydantic-settings = "pydantic_settings"
prompt-toolkit = "prompt_toolkit"
python-dotenv = "dotenv"
pyyaml = "yaml"
dspy-ai = "dspy"
PyJWT = "jwt"
scalar-fastapi = "scalar_fastapi"
