[project]
name = "rlm-dspy-modal"
version = "0.1.0"
description = "Python package + Typer CLI implementation of the RLM with Modal notebook"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "dspy==3.1.3",
  "modal",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.8",
]

[project.scripts]
rlm-modal = "rlm_dspy_modal.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
